# xosview

./: .gitignore  CHANGES  COPYING  Host.cc  Host.h  README  README.bsd  README.devel  README.freebsd  README.irix  README.linux  README.minix  README.netbsd  TODO  Xdefaults.in  Xdefaults.stipple  Xrm.cc  Xrm.h  Xrmcommandline.h  autogen.sh  bitfieldmeter.cc  bitfieldmeter.h  bitmeter.cc  bitmeter.h  chk-src.sh  clopt.cc  clopt.h  configxosv.h  defresources.awk  drawbits.h  example.h  fieldmeter.cc  fieldmeter.h  fieldmeterdecay.cc  fieldmeterdecay.h  fieldmetergraph.cc  fieldmetergraph.h  font.h  fsutil.cc  fsutil.h  (+48 more)
attic/hpux/: MeterMaker.cc  loadmeter.cc  memmeter.h  swapmeter.cc  swapmeter.h
attic/irix65/: Makefile.irix65.in  MeterMaker.cc  MeterMaker.h  README.irix  cpumeter.h  diskmeter.cc  diskmeter.h  gfxmeter.h  loadmeter.h  memmeter.h
bsd/: MeterMaker.cc  MeterMaker.h  btrymeter.cc  btrymeter.h  coretemp.cc  coretemp.h  cpumeter.cc  cpumeter.h  defines.h  diskmeter.cc  diskmeter.h  fsmeter.cc  fsmeter.h  intmeter.cc  intmeter.h  intratemeter.cc  intratemeter.h  intrstats.cc  intrstats.h  kernel.cc  kernel.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  netbsd.cc  netbsd.h  netmeter.cc  netmeter.h  pagemeter.cc  pagemeter.h  sctl.cc  sctl.h  sensor.cc  sensor.h  swapinternal.cc  swapinternal.h  swapmeter.cc  swapmeter.h
cmeter/: bitfieldmeter.cc  bitfieldmeter.h  bitmeter.cc  bitmeter.h  cdiskmeter.cc  cdiskmeter.h  cfsmeter.cc  cfsmeter.h  cintmeter.cc  cintmeter.h  cintratemeter.cc  cintratemeter.h  cloadmeter.cc  cloadmeter.h  cmetermaker.cc  cmetermaker.h  cnetmeter.cc  cnetmeter.h  cpagemeter.cc  cpagemeter.h  cswapmeter.cc  cswapmeter.h  ctzonemeter.cc  ctzonemeter.h  fieldmeter.h  fieldmeterdecay.h  fieldmetergraph.h  meter.cc  meter.h  pdiskmeter.cc  pdiskmeter.h  pintratemeter.cc  pintratemeter.h  ploadmeter.cc  ploadmeter.h  pmemmeter.cc  pmemmeter.h  pnetmeter.cc  pnetmeter.h  ppagemeter.cc  (+5 more)
config/: Makefile  Makefile.bsd.in  Makefile.cmeter.in  Makefile.config.in  Makefile.cygwin.in  Makefile.default.in  Makefile.freebsd.in  Makefile.gnu.in  Makefile.hpux.in  Makefile.irix65.in  Makefile.linux.in  Makefile.linux.memstat.in  Makefile.minix.in  Makefile.sunos5.in  Makefile.top.in  aclocal.m4  configure.in  gcc_auto_depend.m4  m4_ax_append_flag.m4  m4_ax_define_dir.m4  m4_xo_auto_depend.m4  m4_xo_bsd_config.m4  m4_xo_cxx_guess.m4  m4_xo_cxxflags_default.m4  m4_xo_lib_cxx_thread_sleep.m4  m4_xo_lib_xft.m4  m4_xo_lib_xsm.m4  m4_xo_linux_config.m4  m4_xo_msg.m4  makespec.sh  xo_bsd_config.m4  xo_concat.m4  xo_cxx_thread_sleep.m4  xo_gcc_auto_depend.m4  xo_linux_config.m4  xo_min_cxx_check.m4  xo_smlibs.m4  xo_xft_support.m4  xosview.spec.in
cygwin/: MeterMaker.cc  MeterMaker.h  btrymeter.cc  btrymeter.h  cpumeter.cc  cpumeter.h  diskmeter.cc  diskmeter.h  fsmeter.cc  fsmeter.h  intratemeter.cc  intratemeter.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  netmeter.cc  netmeter.h  pagemeter.cc  pagemeter.h  perfcount.cc  perfcount.h  swapmeter.cc  swapmeter.h  tzonemeter.cc  tzonemeter.h  winders.cc  winders.h
debian/: copyright
default/: MeterMaker.cc  MeterMaker.h
doc/: README.bsd  README.cygwin  README.devel  README.gnu  README.linux
gnu/: MeterMaker.cc  MeterMaker.h  cpumeter.cc  cpumeter.h  fsmeter.cc  fsmeter.h  get_def_pager.c  get_def_pager.cc  get_def_pager.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  pagemeter.cc  pagemeter.h  swapmeter.cc  swapmeter.h
hpux/: MeterMaker.cc  MeterMaker.h  cpumeter.cc  cpumeter.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  pagemeter.cc  pagemeter.h  swapmeter.cc  swapmeter.h
irix65/: MeterMaker.cc  MeterMaker.h  cpumeter.cc  cpumeter.h  diskmeter.cc  diskmeter.h  gfxmeter.cc  gfxmeter.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  sarmeter.cc  sarmeter.h
linux/: MeterMaker.cc  MeterMaker.h  btrymeter.cc  btrymeter.h  cpumeter.cc  cpumeter.h  diskmeter.cc  diskmeter.h  fsmeter.cc  fsmeter.h  intmeter.cc  intmeter.h  intratemeter.cc  intrstats.cc  intrstats.h  lmstemp.cc  lmstemp.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  netmeter.cc  netmeter.h  nfsmeter.cc  nfsmeter.h  pagemeter.cc  pagemeter.h  raidmeter.cc  raidmeter.h  serialmeter.cc  serialmeter.h  swapmeter.cc  swapmeter.h  tzonemeter.cc  tzonemeter.h  wlinkmeter.cc  wlinkmeter.h
minix/: MeterMaker.cc  MeterMaker.h  cpumeter.cc  cpumeter.h  fsmeter.cc  fsmeter.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  xosvproc.cc  xosvproc.h
netbsd/: btrymeter.cc  btrymeter.h  diskmeter.h  intmeter.cc  intratemeter.cc  kernel.cc  netmeter.cc  swapinternal.h  swapmeter.cc
sunos5/: Makefile  MeterMaker.cc  MeterMaker.h  cpumeter.cc  cpumeter.h  diskmeter.cc  diskmeter.h  fsmeter.cc  fsmeter.h  intratemeter.cc  intratemeter.h  kstats.cc  kstats.h  loadmeter.cc  loadmeter.h  memmeter.cc  memmeter.h  netmeter.cc  netmeter.h  pagemeter.cc  pagemeter.h  swapmeter.cc  swapmeter.h
themes/: .gitignore  Makefile  README  Xdefaults.m4  black-nw.m4  book.m4  classic.m4  clouds.xpm  clover.m4  clover.xpm  default.m4  holes.m4  holes.xpm  hubble.xpm  pink.m4  sky.m4  space.m4  spring.m4  spring.xpm  white-nb.m4
